@@ -3,8 +3,8 @@
 	{
 		"FileVersion": {
 			"Major": 2017,
-			"Minor": 7,
-			"Patch": 27,
+			"Minor": 8,
+			"Patch": 2,
 			"Build": 0
 		},
 		"ProductVersion": {
@@ -31,7 +31,7 @@
 		"OriginalFilename": "",
 		"PrivateBuild": "",
 		"ProductName": "Luzhibo",
-		"ProductVersion": "2017.7.0.0",
+		"ProductVersion": "2017.8.0.0",
 		"SpecialBuild": ""
 	},
 	"VarFileInfo":
