@@ -2,6 +2,9 @@
 *Updated*
 ~~Fixed or Removed~~
 
+[2017080200]
+**xingyan support**
+
 [2017072700]
 ~~zhanqi bug~~
 
